# customer-support-llm-finetune

./: .gitignore  Makefile  README.md  analyze_training_data_quality.py  evaluate_model_quality.py  expand_training_data.py  expand_training_data_massive.py  improve_training_data_quality.py  pyproject.toml  quick_commit.sh  requirements.txt  run_quality_assessment.sh  test_improved_postprocessing.py  test_model.py  test_model_quick.py  test_results.json  training_data_quality_report.json
csft/: __init__.py  io.py  prompts.py  types.py
csft/providers/: __init__.py  base.py  hf_local.py  mock.py
data/: AUTHORING_GUIDE.md  README.md  format.md  taxonomy.yaml
evaluation/: apply_expectation_defaults.py  eval.py  expectations.py  export_review_csv.py  migrate_expectations.py  migrate_test_cases.py  rubric.md  score_results.py  scoring.py  show_failures.py  test_cases.json
evaluation/results/: adapter.json  adapter_debug.json  base.json  (+6 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
inference/: demo.py  server.py
prompts/: guidelines.md  system.txt
scripts/: __init__.py  build_dataset.py  build_frontend_threads.py  build_training_jsonl.py  compare_runs.py  debug_generation.py  generate_synthetic_cases.py  ingest_zendesk_export.py  prepare_data.py  run_adapter_demo.py  run_golden_eval.py  run_smoke_train_mps.sh  sanity_check.py  setup_macos_apple_silicon.sh
training/: config.yaml  config_better_model.yaml  train.py  train_colab.ipynb  utils.py
(+19 files in other folders)
